--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=New+Amsterdam&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
 :root {
   --accent: #ffb145;
   --primary: #121212;
@@ -19,6 +18,7 @@ body {
   display: grid;
   place-items: center;
   background-color: var(--accent);
+  font-family: "Poppins", sans-serif;
 }
 
 .product-card {
@@ -129,14 +129,18 @@ body {
 .buy-now-button {
   width: 220px;
   height: 60px;
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: var(--accent);
   align-self: flex-end;
   cursor: pointer;
-  font-size: 35px;
+  font-size: 30px;
+  font-weight: 500;
   margin-left: 590px;
   top: 50px;
   position: absolute;
   text-align: center;
   align-items: center;
+}
+.buy-now-button:hover {
+  transition: 0.2s ease-in-out;
 }
